# distrrr

./: Cargo.toml  build.rs  config.yaml
database/postgres/schema/: distrrr.sql  job.sql
proto/: distrrr-api.proto  distrrr-job-event.proto  job-status.proto
src/: entity.rs  job_controller.rs  job_repository.rs  main.rs  proto.rs  server.rs  settings.rs
