[package]
name = "distrrr"
version = "2020.0.0-alpha1"
edition = "2021"

[[bin]]
name = "distrrr-api-server"
path = "src/server.rs"

#[[bin]]
#name = "distrrr-api-client"
#path = "src/client.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.3"
prost-types = "0.11.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8.3"
