[package]
name = "distrrr"
version = "2022.1.0"
edition = "2021"

[[bin]]
name = "distrrr-api-server"
path = "src/server.rs"

#[[bin]]
#name = "distrrr-api-client"
#path = "src/client.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.3"
prost-types = "0.11.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"]}
postgres-types = { version = "0.2.4", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
tonic-build = "0.8.3"
